--- a/css/articles.css
+++ b/css/articles.css
@@ -40,3 +40,13 @@ h1  {
   margin-bottom: 20px;
 
 }
+
+
+@media only screen and (max-width: 500px) {
+  .content {
+      padding: 10px 10px;
+  }
+
+
+
+}
