--- a/css/articles.css
+++ b/css/articles.css
@@ -42,11 +42,13 @@ h1  {
 }
 
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 1000px) {
   .content {
-      padding: 10px 10px;
+      padding: 8% 8%;
   }
-
-
-
+  .content img {
+    width: 80%;
+    align-self: center;
+    padding: 0% 10%;
+  }
 }
