--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
   padding: 0px;
   margin: 0px;
   width: 100%;
-  height: 75%;
+  height: 70%;
   border-radius: 10px;
 }
 
@@ -31,7 +31,7 @@
   text-decoration: none;
   border: 1px solid #1e272e;
   padding: 1% 2% 2% 2%;
-  margin-top: 3%;
+  margin-top: 1%;
 }
 
 .card:hover {
@@ -39,13 +39,27 @@
   transition: 0.4s;
 }
 
+
+@media only screen and (max-width:1300px) {
+  .cards {
+    grid-template-columns: repeat(3,1fr)
+  }
+
+}
+
+@media only screen and (max-width: 1000px) {
+  .cards {
+    grid-template-columns: repeat(2,1fr);
+    padding: 5% 5%;
+  }
+}
+
 @media only screen and (max-width: 500px) {
   .cards {
     padding: 15px;
-    grid-template-columns: repeat(1, 1fr)
+    grid-template-columns: repeat(1, 1fr);
 
   }
   .card:hover {
     transform: scale(1.05)
   }
-}
