--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@
 
 @media only screen and (max-width:1300px) {
   .cards {
-    grid-template-columns: repeat(3,1fr)
+    grid-template-columns: repeat(3,1fr
   }
 
 }
