--- a/style.css
+++ b/style.css
@@ -3,24 +3,22 @@
   display: grid;
   grid-template-columns: repeat(4,1fr);
   grid-auto-rows: auto;
-  grid-gap: 1.5rem;
+  grid-gap: 2rem;
   padding:50px 100px;
 }
 
 .card {
   position: relative;
   color: #1e272e;
-  overflow: hidden;
-  margin: 2%;
   padding-left: 0px;
 }
 
 .card img {
   padding: 0px;
   margin: 0px;
-  width: 100%;
-  height: 70%;
   border-radius: 10px;
+  height: 70%;
+  width: 100%;
 }
 
 .btn2 {
@@ -29,34 +27,35 @@
   grid-template-rows: 10px;
   color: #1e272e;
   text-decoration: none;
-  border: 1px solid #1e272e;
-  padding: 1% 2% 2% 2%;
-  margin-top: 1%;
+  border: 1px solid black;
+  padding: 1% 0% 3% 2%;
+  opacity: 0;
 }
 
 .card:hover {
   transform: scale(1.1);
   transition: 0.4s;
 }
-
-
-@media only screen and (max-width:1300px) {
-  .cards {
-    grid-template-columns: repeat(3,1fr
-  }
-
+.card:hover .btn2 {
+  opacity: 1;
 }
 
-@media only screen and (max-width: 1000px) {
+
+@media only screen and (max-width:1024px) {
+  .cards {
+    grid-template-columns: repeat(3,1fr);
+  }
+}
+
+@media only screen and (max-width:800px) {
   .cards {
     grid-template-columns: repeat(2,1fr);
-    padding: 5% 5%;
   }
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 600px) {
   .cards {
-    padding: 15px;
+    padding: 7%;
     grid-template-columns: repeat(1, 1fr);
 
   }
