--- a/css/profilecard.css
+++ b/css/profilecard.css
@@ -1,13 +1,66 @@
+.side {
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  /* Fix Chrome rendering bug */
+  transform: rotate(0deg) translateZ(1px);
+}
+
+.profilecard:hover,
+.back {
+  transform: rotateY(-180deg) translateZ(1px);
+}
+
+@media (max-width:700px) {
+  .profilecard {
+    transform: scale(.5);
+  }
+  .profilecard:hover {
+    transform: scale(.5) rotateY(-180deg) translateZ(1px);
+  }
+}
+
+.pgrid {
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  grid-auto-rows: auto;
+  grid-gap: 2rem;
+  padding:50px 100px;
+}
+
 .profilecard {
-  background: rgb(20,20,20);
-  width: 300px;
+  background: #1e272e;
+  width: 400px;
   height: 200px;
   margin-bottom:50px;
   border-radius: 15px;
   color: #fff;
-  align-items: center;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  font-family: 'Open Sans', sans-serif;
+
+  transform-style: preserve-3d;
+  transition: 0.6s;
 }
 
-.name {
+.plogo {
+  color: #fff;
+  letter-spacing: 6px;
+  text-align: center;
+  border: 1px solid #19F6E8;
+  padding: 15px;
+  text-transform: uppercase;
+  font-family: 'Roboto', sans-serif;
+  font-size: 1.4em;
+  font-weight: normal;
+  line-height: 32px;
+  margin: 60px 50px;
 
 }
+
+.pimg{
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  margin: 0px;
+  padding: 0px;
+  align: center;
