--- a/css/articles.css
+++ b/css/articles.css
@@ -12,7 +12,7 @@ a{
   padding: 5% 30%;
   font-size: 20px;
   font-family: "Georgia","Cambria","Times New Roman","Times",serif;
-  font-size: 20px;
+  font-size: 17px;
   line-height: 1.8;
 }
 
@@ -39,7 +39,20 @@ h1  {
   display:inline-block;
   border-radius:3px;
   margin-bottom: 20px;
+}
 
+#QS {
+  height: 400px;
+  width: 267px;
+  margin: 0px;
+  padding: 0px;
+}
+
+.imagebreak {
+  display:inline-grid;
+  grid-template-columns: 267px 267px;
+  grid-column-gap: 50px;
+  padding-bottom: 50px;
 }
 
 @media only screen and (max-width: 1200px) {
