--- a/css/articles.css
+++ b/css/articles.css
@@ -11,11 +11,10 @@ a{
 .content  {
   padding: 5% 30%;
   font-size: 20px;
-  font-family: "Georgia","Cambria","Times New Roman","Times",serif;
+  font-family: 'Alegreya Sans', sans-serif;
   font-size: 17px;
   line-height: 1.8;
 }
-
 
 p {
   margin: 0px 0px 40px 0px;
@@ -24,7 +23,13 @@ p {
 h1  {
   margin-bottom: 50px;
   font-size: 50px;
-  font-weight: 800;
+  font-weight: 500;
+  font-family: 'Alegreya SC', serif;
+}
+
+h2 {
+  font-weight: 300; 
+  font-family: 'Alegreya SC', serif;
 }
 
 #Umberto {
