--- a/style.css
+++ b/style.css
@@ -36,6 +36,11 @@ body {
   background-position: center center;
 }
 
+.card h3 {
+  text-transform: uppercase;
+  margin-top: -10px;
+}
+
 .card-container {
   padding: 10px 0px;
   text-align: center;
@@ -45,7 +50,6 @@ body {
   transform: scale(1.1);
   transition: 0.4s;
 }
-
 
 @media only screen and (max-width:1024px) {
   .cards {
