--- a/css/LS.css
+++ b/css/LS.css
@@ -8,12 +8,12 @@
   grid-auto-rows: auto;
   position: absolute;
   padding: 0px;
-  margin-left: -2.5%;
-  top: 50%;
+  margin-left: -1.5%;
+  padding-top: 20%;
   left: 50%;
   transform: translate(-50%, -50%);
   align-self: center;
-    font-family: 'Alegreya Sans', sans-serif;
+  font-family: 'Alegreya Sans', sans-serif;
 }
 
 img.lgrid {
@@ -40,6 +40,8 @@ h4.language {
     display: grid;
     grid-template-columns: 1fr;
     grid-row-gap: 10px;
+    padding-top: 70px;
+    margin-left: 0;
   }
   #sweC {
     border-left: 0px;
