--- a/style.css
+++ b/style.css
@@ -51,6 +51,16 @@ body {
   transition: 0.4s;
 }
 
+.led {
+   grid-area: 1 / 1 / span 1 / span 2;
+}
+
+.bk {
+  grid-row-start: 3;
+  grid-row-end: 4;
+  grid-column-start: 2;
+  grid-column-end: 5;
+}
 @media only screen and (max-width:1024px) {
   .cards {
     grid-template-columns: repeat(3,1fr);
@@ -64,6 +74,9 @@ body {
 }
 
 @media only screen and (max-width: 600px) {
+  .led {
+     grid-area: 1 / 1 / span 1 / span 2;
+  }
   .cards {
     padding: 7%;
     grid-template-columns: repeat(1, 1fr);
