--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ body {
     grid-area: auto /  / span 2 / span 2;
   }
   .bk {
-    grid-area: auto / 1 / span 1 / span 1;
+    grid-area: 4 / 2 / span 1 / span 2;
   }
 }
 
@@ -84,7 +84,7 @@ body {
     grid-area: 1 / 1 / span 1 / span 2;
   }
   .bk {
-    grid-area: auto / 1 / span 1 / span 1;
+    grid-area: 5 / 2 / span 1 / span 1;
   }
 }
 
