--- a/css/LS.css
+++ b/css/LS.css
@@ -14,6 +14,7 @@
   transform: translate(-50%, -50%);
   align-self: center;
   font-family: 'Alegreya Sans', sans-serif;
+  z-index: -2000;
 }
 
 img.lgrid {
